k8s/10-mongo-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: yolo
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: docker.io/pmcmuchiri/pmc-yolo-database:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
