k8s/20-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-backend
  namespace: yolo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yolo-backend
  template:
    metadata:
      labels:
        app: yolo-backend
    spec:
      containers:
        - name: yolo-backend
          image: docker.io/pmcmuchiri/pmc-yolo-backend:v1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
