k8s/30-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-frontend
  namespace: yolo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yolo-frontend
  template:
    metadata:
      labels:
        app: yolo-frontend
    spec:
      containers:
        - name: yolo-frontend
          image: docker.io/pmcmuchiri/pmc-yolo-client:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
