k8s/11-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: yolo
  labels:
    app: mongo 
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None   
  type: ClusterIP
